--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light">
     
     <div class="main">
         <p class="main__paragraph">
